--- a/EarthBlue/Info.plist
+++ b/EarthBlue/Info.plist
@@ -19,5 +19,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>EarthBlue need to access Photos to save Imageries.</string>
 </dict>
 </plist>
